Adds theorytab example

--- a/examples/HelloPyquist.ipynb
+++ b/examples/HelloPyquist.ipynb
@@ -27,6 +27,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "75038a0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(22049, 1) 1.0072286128997803\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyquist.web import fetch_from_freesound\n",
+    "\n",
+    "audio = fetch_from_freesound(\"https://freesound.org/people/cdonahueucsd/sounds/337131/\")\n",
+    "print(audio.shape, audio.peak_gain)\n",
+    "pq.play(audio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6ed3867",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyquist.web import fetch_from_theorytab\n",
+    "\n",
+    "def note(pitch: int, offset: int = -12, **kwargs) -> Audio:\n",
+    "    audio = fetch_from_freesound(\"https://freesound.org/people/cdonahueucsd/sounds/620964/\")\n",
+    "    original_pitch = 67     # G4 as midi pitch\n",
+    "    ratio = pq.helper.pitch_to_frequency(pitch + offset) / pq.helper.pitch_to_frequency(original_pitch)\n",
+    "    return Audio.from_array(audio, round(audio.sample_rate * ratio)).resample(audio.sample_rate)\n",
+    "\n",
+    "metronome, melody, harmony = fetch_from_theorytab(\"https://hookpad.hooktheory.com/?idOfSong=RPxeJeJaob_\")\n",
+    "melody = [(t, note, kwargs) for t, kwargs in melody]\n",
+    "pq.play(pq.score.render_score(melody, metronome))\n",
+    "\n",
+    "#pq.play(note(60))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "6faee64c",
    "metadata": {},
